--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Austin Meek"
-  avatar           : "profile.png"
+  avatar           : "test_pfp.jpg"
   bio              : "MATS Scholar, 7.0 + Extension / ML PhD Student"
   location         : "Newark, Delaware"
   employer         :
